# GUET-AllinOne-Notifier

./: .gitignore  CONTRIBUTE.md  FRONTEND_OPTIMIZATION.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  tmp_probe_2fa_page.html  tmp_probe_2fa_scripts.js
backend/src/guet_notifier/: __init__.py  __main__.py  auth.py  collector_pcportal.py  db.py  forwarding.py  main.py  models.py  pushers.py  registry.py  rules.py  schemas.py  settings.py
backend/tests/: test_health.py
docs/: KNOWN_BUGS.md
frontend/: index.html
frontend/assets/: app.css  app.entry.js  app.js  app.login.css
frontend/assets/i18n/: en-US.json  zh-CN.json
frontend/assets/modules/: app-bootstrap.js  auth-flow.js  i18n-manager.js  login-account-manager.js  profile-session-manager.js  renderers.js  route-controller.js  rules-manager.js  smart-campus-manager.js  ui-manager.js
notifier_dev_doc/: rules_forwarding_dev_notes.md
